subprojects/groovy-parser-antlr4/src/test/resources/fail/InterfaceDeclaration_01.groovy
interface Foo {
    def doit( String param = "Groovy", int o )
}
